[project]
name = "proga2moon"
version = "0.1.0"
description = "Telegram bot for event organizations"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "segno (>=1.6.6,<2.0.0)",
    "pytelegrambotapi (>=4.27.0,<5.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
